<resources>
    <string name="app_name">Emitra-EGrievance</string>
    <string name="showcase_main_title">Showcase Sample</string>
    <string name="showcase_main_message">Press the button showcased to change the showcase\\\'s style</string>

    <string name="submit">Submit</string>
    <string name="go_settings">GO Settings</string>
    <string name="internet_msg">Internet Connection Required.</string>
    <string name="exit">Exit</string>
    <string name="Edit">Edit</string>
    <string name="Remove">Remove</string>
    <string name="confirm">CONFIRM</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="showCaseSample">Show Case Sample</string>
    <string name="hintUserName">User Name</string>
    <string name="hintPassword">Password</string>
    <string name="Login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">New User ? Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="Name">Full Name</string>
    <string name="Mobile">Mobile No.</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="Location">Location</string>
    <string name="password_length">*password must be atleast 8 characters</string>
    <string name="Notification">Notification</string>
    <string name="Home">Home</string>
    <string name="download_pdf">Download pdf</string>
    <string name="no_connection">Looks like you\\\'re having a network issue! You\\\'ve got to be connected to use this.</string>
    <string name="help">Help</string>
    <string name="quit">Quit</string>
    <string name="settings">Settings</string>
    <string name="string_help_text"> The permission is missing.\n\nTo grant this permission click on Settings, then Permissions and turn the permission on.\n\nThen click back twice to return to the app</string>
    <string name="exit_app">Exit App</string>
    <string name="description">Description</string>
    <string name="AttachFile">Attach File</string>
    <string name="Subject">Subject</string>
    <string name="Department">Department</string>
    <string name="Grievance_Form">Grievance Form</string>
    <string name="SubDepartment">Sub Department</string>
    <string name="Payment">Payment Services</string>
    <string name="Grievance">Grievance</string>
    <string name="Payment_Detail">Payment Detail</string>
    <string name="PNR">PNR :</string>
    <string name="Amount">Amount :</string>
    <string name="Make_Payment">Make Payment</string>
    <string name="NoRecordsFound">No Records Found</string>
    <string name="select_payment_service">Select Payment Service</string>
    <string name="PaymentHistory">Payment History</string>
    <string name="GrievanceServices">Grievance Services</string>
    <string name="GrievanceHistroy">Grievance Histroy</string>
    <string name="noDataFound">No Data Found</string>
    <string name="GrievanceHistroyDetail">Grievance History Detail</string>
    <string name="PaymentHistroy">Payment History</string>
    <string name="invalid_credential">Invalid credential</string>
    <string name="click_to_pay">Click here to avail the payment facilities</string>
    <string name="click_to_pay_history">Click here to see the payment history</string>
    <string name="click_to_griev">Click here to register your grievance</string>
    <string name="click_to_griev_history">Click here to see your grievance history</string>
    <string name="english_lbl">English</string>
    <string name="hindi_lbl">हिंदी</string>
    <string name="fetch_util"> Fetch Due Utility Bill Details</string>
    <string name="make_pay"> making online payment </string>
    <string name="make_pay_desc">using any Netbanking/ Credit Card/ Debit Card of various utility bills</string>
    <string name="regist_track_grievance"> Register and track your Grievance</string>
    <string name="title">Title</string>

    <string name="change_lang">Click here to change language</string>
    <string name="click_noti"> Click to see notification</string>
    <string name="got_it"> GOT IT</string>


    <string-array name="lang_array">
        <item>English</item>
        <item>हिंदी</item>
    </string-array>
</resources>
