<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="20dp"
    tools:context="com.phppoets.grievance.activity.LoginActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_image_white" />

    <RelativeLayout
        android:id="@+id/rl_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewLogo"
        android:layout_centerVertical="true">

        <View
            android:id="@+id/vEnrollment"
            android:layout_width="3dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:background="@color/colorAccent" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/vEnrollment"
            android:background="#ffffff"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/hintUserName"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryDark" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_userName">

        <View
            android:id="@+id/vPassword"
            android:layout_width="3dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:background="@color/colorAccent" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/vPassword"
            android:background="#ffffff"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/hintPassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryDark" />
    </RelativeLayout>
    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPasswordLength"
        android:layout_below="@+id/rl_password"
        android:text="@string/password_length"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        />
-->

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/rl_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="15dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"

        >

        <TextView
            android:id="@+id/txtForgot"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_gravity="left"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:gravity="right"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
