<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mstb="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:id="@+id/imageViewMenu"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/Home"
                android:textColor="@color/white"
                android:textSize="20sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgNotification"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/mstb_multi_id"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:src="@drawable/ic_notifications_none_black_24dp"/>

                <org.honorato.multistatetogglebutton.MultiStateToggleButton
                    android:id="@+id/mstb_multi_id"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="5dp"
                    android:layout_marginTop="10dip"
                    mstb:mstbPrimaryColor="@color/white"
                    mstb:mstbSecondaryColor="@color/colorPrimary"

                    mstb:values="@array/lang_array"/>

            </RelativeLayout>


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="10dp">

                <com.phppoets.grievance.support.SmoothViewPager
                    android:id="@+id/viewpager_slide"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>


                <com.phppoets.grievance.support.CirclePageIndicator
                    android:id="@+id/circlePageIndicator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:padding="5dp"
                    app:fillColor="@color/colorPrimary"
                    app:pageColor="@color/grey"
                    app:radius="4dp"
                    app:strokeWidth="0dp"/>
            </FrameLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/cvPaymentService"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginEnd="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="25dp"
                android:elevation="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtPaymentService"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/Payment"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/txtPaymentServiceDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="10dp"
                        android:text="@string/click_to_pay"
                        android:textColor="@color/sub_title_color"
                        android:textSize="10sp"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvPaymentHistroy"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginEnd="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="25dp"
                android:elevation="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtPaymentHistory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/PaymentHistroy"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/txtPaymentServiceHisDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="10dp"
                        android:text="@string/click_to_pay_history"
                        android:textColor="@color/sub_title_color"
                        android:textSize="10sp"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvGrievanceServices"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginEnd="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="25dp"
                android:elevation="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtGrievanceServices"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/GrievanceServices"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/txtGrievDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="10dp"
                        android:text="@string/click_to_griev"
                        android:textColor="@color/sub_title_color"
                        android:textSize="10sp"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvGrievanceHistroy"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="25dp"
                android:elevation="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtGrievanceHistroy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/GrievanceHistroy"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/txtGrievanceHistroyDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="10dp"
                        android:text="@string/click_to_griev_history"
                        android:textColor="@color/sub_title_color"
                        android:textSize="10sp"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>



