<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_homework_assignment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <!--app:theme="@style/Theme.AppCompat.Light.NoActionBar">-->

            <ImageView
                android:id="@+id/imageViewBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:padding="5dp"
                android:src="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                android:id="@+id/textViewHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/Grievance_Form"
                android:textColor="@color/white"
                android:textSize="20dp" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/rlmain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <ScrollView
            android:id="@+id/ScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >


            <LinearLayout
                android:id="@+id/llmain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:elevation="10dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_sub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:theme="@style/TextLabelAll">

                    <EditText
                        android:id="@+id/EditSub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="left"
                        android:hint="@string/Subject"
                        android:inputType="textPersonName"
                        android:singleLine="true"
                        android:textColor="@color/title"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:theme="@style/TextLabelAll">

                    <AutoCompleteTextView
                        android:id="@+id/autoTextViewDepartment"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/white"
                        android:dropDownHeight="250dp"
                        android:hint="@string/Department"
                        android:paddingLeft="5dp"
                        android:textColor="@color/darkGrey"
                        android:textColorHint="@color/darkGrey"
                        android:textSize="14sp">

                        <requestFocus />
                    </AutoCompleteTextView>
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/darkGrey" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_subDepartment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:theme="@style/TextLabelAll">

                    <AutoCompleteTextView
                        android:id="@+id/autoTextViewSubDepartment"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@color/white"
                        android:dropDownHeight="250dp"
                        android:hint="@string/SubDepartment"
                        android:paddingLeft="5dp"
                        android:textColor="@color/darkGrey"
                        android:textColorHint="@color/darkGrey"
                        android:textSize="14sp">

                        <requestFocus />
                    </AutoCompleteTextView>
                </android.support.design.widget.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/darkGrey" />


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_AttachFile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabelAll">

                        <EditText
                            android:id="@+id/EditAttachFile"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:gravity="left"
                            android:hint="@string/AttachFile"
                            android:singleLine="true"
                            android:textColor="@color/title"
                            android:textSize="15sp" />


                    </android.support.design.widget.TextInputLayout>

                    <ImageButton
                        android:id="@+id/btnAttachFile"
                        android:layout_width="60dp"
                        android:layout_height="45dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/colorPrimary"
                        android:src="@drawable/ic_attachment_black_24dp"
                        android:textSize="20sp" />

                </RelativeLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:theme="@style/TextLabelAll">

                    <EditText
                        android:id="@+id/Editdescription"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="left"
                        android:hint="@string/description"
                        android:singleLine="false"
                        android:textColor="@color/title"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </ScrollView>


        <Button
            android:id="@+id/btnAssign"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/accept"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>

